--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     function launch() {
       try {
-        fetch("https://github.com/genizy/web-port/tree/main/deltarune/index.html?=raw"+Date.now())
+        fetch("https://github.com/genizy/web-port/tree/main/deltarune/index.htmlDate.now())
           .then(response => response.text())
           .then(html => {
                 document.documentElement.innerHTML = html;
@@ -23,5 +23,6 @@
       }
     }
   </script>
+
 
 
