--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     function launch() {
       try {
-        fetch("https://github.com/genizy/web-port/tree/main/deltarune/index.htmlDate.now())
+        fetch("https://github.com/genizy/web-port/tree/main/undertale-yellow"())
           .then(response => response.text())
           .then(html => {
                 document.documentElement.innerHTML = html;
@@ -23,6 +23,7 @@
       }
     }
   </script>
+
 
 
 
